proxy/envoy.yaml
admin:
    address:
        socket_address:
            address: 0.0.0.0
            port_value: ${ADMIN_PORT}
    access_log:
        - name: envoy.access_loggers.stdout
          typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: ${LISTEN_PORT}
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: auto
                          stream_idle_timeout: 0s
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/" }
                                          route:
                                              cluster: backend
                                              timeout: 0s
                                              max_stream_duration:
                                                  grpc_timeout_header_max: 0s
                                    typed_per_filter_config:
                                        envoy.filters.http.cors:
                                            "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                                            allow_origin_string_match:
                                                - prefix: "*"
                                            allow_methods: POST, OPTIONS
                                            allow_headers: "*"
                                            expose_headers: "*"
                          http_filters:
                              - name: envoy.filters.http.grpc_web
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                              - name: envoy.filters.http.cors
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          access_log:
                              - name: envoy.access_loggers.file
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                                    path: /dev/stdout
    clusters:
        - name: backend
          connect_timeout: 0.25s
          type: logical_dns
          lb_policy: round_robin
          typed_extension_protocol_options:
              envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                  "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                  explicit_http_config:
                      http2_protocol_options: {}
          load_assignment:
              cluster_name: cluster_0
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: ${BACKEND_IP}
                                      port_value: ${BACKEND_PORT}
